added dependency on axios

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "start": "node server/server.js"
     },
     "dependencies": {
+        "axios": "^0.19.2",
         "express": "^4.17.1",
         "forge-server-utils": "^8.0.14"
     }
